one final fix for fave buttons logic. ready to deploy changes

--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -37,7 +37,7 @@
         <div class="uk-grid-divider uk-grid-column-small justify-center"uk-grid>
           <div class="">
             <div class="pb-1">
-                <span id="fave-count" class="text-indigo-50 pr-2 text-xl py-1">{{fave_count}}</span><button id="{{id}}" class="addFave-btn"><i id="heart" class="fa-solid fa-heart text-3xl"></i></button>
+                <span id="fave-count" class="text-indigo-50 pr-2 text-xl py-1">{{fave_count}}</span><button id="{{id}}" class="addFave-btn-{{id}}"><i id="heart" class="fa-solid fa-heart text-3xl hover:text-indigo-200"></i></button>
             </div>
             <div class="pt-1">
               {{!-- <span id="fave-count" class="text-indigo-50 pr-4 text-xl py-2"></span> --}}
