--- a/views/single-pet.handlebars
+++ b/views/single-pet.handlebars
@@ -1,8 +1,10 @@
     <div class="uk-child-width-1-2@m flex justify-center"uk-grid>
         <div>
             {{> pet-info pet}}
+            {{> user-contact pet}}
         </div>
     </div>
+
 
 {{#if loggedIn}}
 <div class="flex justify-center">
