--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <section class=" uk-flex uk-flex-center">
     
-    <div class="w-9/12">
+    <div class="w-80 lg:w-1/4 md:w-1/2 sm:w-9/12">
         <form class="">
         
             <div class="rounded-lg uk-margin-small-top bg-gradient-to-b from-violet-600 to-indigo-700 shadow-2xl shadow-indigo-700">
