fixed pet info to be more responsive

--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -9,7 +9,7 @@
             </div>
         </div>
   
-  <div class="uk-position-bottom bg-indigo-700 p-8 rounded-b-lg">
+  <div class="uk-position-bottom bg-indigo-700 pl-8 pb-10 pt-4 rounded-b-lg">
     <div class="relative">
         <div class="absolute">
           <div class="flex items-center justify-between flex-wrap">
@@ -21,7 +21,7 @@
               {{format_date created_at}}
             </div>
           </div>
-          <div class="grid grid-cols-3 gap-x-2">
+          <div class="grid grid-cols-2 gap-x-2">
               <div><span class="font-semibold text-blue-300">Name:
                 </span>{{pet_name}}</div>
               <div><span class="font-semibold text-blue-300">Species:
