contact info position

--- a/views/partials/user-contact.handlebars
+++ b/views/partials/user-contact.handlebars
@@ -1,8 +1,8 @@
-<div class="grid grid-cols-2 gap-x-2 place-items-center py-2">
-  <div>
+<div class="py-2 flex justify-center">
+  <div class="px-4">
       <a href="tel:{{user.phone}}" class="text-xl text-indigo-50 hover:no-underline hover:text-indigo-200"><i class="fa-solid fa-mobile-screen-button px-1 text-blue-300 text-2xl"></i>{{user.phone}}</a>
   </div>
-  <div>
+  <div class="px-4">
       <a href="mailto:{{user.email}}" class="text-xl text-indigo-50 hover:no-underline hover:text-indigo-200"><i class="fas fa-paper-plane px-2 text-blue-300"></i>{{user.email}}</a>
   </div>
 </div>
