contact info positioning done nowgit add .

--- a/views/partials/user-contact.handlebars
+++ b/views/partials/user-contact.handlebars
@@ -1,4 +1,4 @@
-<div class="py-2 flex justify-center">
+<div class="pt-5 pb-2 flex justify-center">
   <div class="px-4">
       <a href="tel:{{user.phone}}" class="text-xl text-indigo-50 hover:no-underline hover:text-indigo-200"><i class="fa-solid fa-mobile-screen-button px-1 text-blue-300 text-2xl"></i>{{user.phone}}</a>
   </div>
