--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -9,7 +9,7 @@
             </div>
         </div>
   
-  <div class="uk-position-bottom bg-indigo-700 px-8 pb-10 pt-4 rounded-b-lg">
+  <div class="uk-position-bottom bg-indigo-700 pl-8 pr-4 lg:pr-8 pb-10 pt-4 rounded-b-lg">
     <div class="relative">
         <div class="absolute">
           <div class="flex items-center justify-between flex-wrap">
