fixed edit pet page not that it matters anymore lol

--- a/views/edit-pet.handlebars
+++ b/views/edit-pet.handlebars
@@ -1,96 +1,113 @@
 <article class="flex flex-col center-items justify-center">
   <div class="flex justify-start text-3xl text-indigo-50 font-semibold my-5">
     <div class="mx-6">
-      <a href="/dashboard" class="hover:text-indigo-100"><i class="fa-solid fa-angle-left"></i> Back to dashboard</a>
+      <a href="/dashboard" class="hover:text-indigo-100 hover:no-underline"><i class="fa-solid fa-angle-left"></i> Back to dashboard</a>
     </div>
   </div>
 </article>
-<div class="flex center-items justify-center">
-  <section>
-      <h2
-      class="flex justify-center text-3xl text-indigo-50 font-semibold my-5">
-        Edit Pet Info
-      </h2>
-      <div class="grid grid-flow-col">
-        <div class="flex flex-wrap flex-row items-center mr-3">
-          <div>
-              <div class="flex my-5">
-                  <a href="/dashboard/"><i id="edit-pet" class="fas fa-save text-sky-400 hover:text-sky-500 text-2xl"></i></a>
-              </div>
-              <div class="flex my-5">
-                  <button id="delete-pet-btn"><i class="fa fa-trash text-red-500 hover:text-red-300 text-2xl" aria-hidden="true"></i></button>
-              </div>
-          </div>
-      </div>
-      <div class="rounded-t-lg bg-gradient-to-b from-violet-600 to-indigo-700 shadow-2xl shadow-indigo-700">
-          <form class="bg-transparent rounded-lg shadow-xl m-5">
 
-            <div class="">
-                    <div class="px-6" uk-grid>
+
+<section class="uk-flex uk-flex-center">
+    <div class="w-80 lg:w-1/4 md:w-1/2 sm:w-9/12">
+        <form class="">
+        
+            <div class="rounded-lg uk-margin-small-top bg-gradient-to-b from-violet-600 to-indigo-700 shadow-2xl shadow-indigo-700">
+
+                <div class="">
+                    <div class="flex justify-center pt-4 mt-9 mb-7 items-center">
+                        <h2 class="uk-text-large text-indigo-50"><i class="fa-solid fa-cat pr-2 text-violet-300"></i> Post Your Pet <i class="fa-solid fa-dog pl-2 text-violet-300"></i></h2>
+                    </div>
+                    <div>
+                    </div>
+                        
+                    <div class="px-6 flex justify-center" uk-grid>
                         <div class="flex justify-center">
                             <label for="pet_name"></label>
-                            <input class="dashboard-inputs" type="text" placeholder="Pet Name" id="pet-name" name="pet-name" value="{{pet.pet_name}}"/>
+                            <input class="dashboard-inputs" type="text" placeholder="Pet Name" id="pet-name" name="pet-name" value="{{pet.pet_name}}" />
                         </div>    
 
                         <div class="flex justify-center">
-                            <label for="species"></label>
-                            <input class="dashboard-inputs" placeholder="Species" id="species" name="species" value="{{pet.species}}" />
+                            
+                            <select class="selector-sizing dashboard-inputs" id="species" name="species" value="{{pet.species}}">
+                                <option value="dog">Dog</option>
+                                <option value="cat">Cat</option>
+                                <option value="bird">Bird</option>
+                                <option value="fish">Fish</option>
+                                <option value="reptile">Reptile</option>
+                            </select>
+  
                         </div>
                         
                         <div class="flex justify-center">
-                            <label for="breed"></label>
-                            <input class="dashboard-inputs" placeholder="Breed" id="breed" name="breed" value="{{pet.breed}}" />
+                            <label for="pet_name"></label>
+                            <input class="dashboard-inputs" type="text" placeholder="Breed" id="breed" name="breed" value="{{pet.breed}}"/>
+                            
                         </div>
                         
                         <div class="flex justify-center">
-                            <label for="size"></label>
-                            <input class="dashboard-inputs" placeholder="Size" id="size" name="size" value="{{pet.size}}" />
+                            
+                            <select class="selector-sizing dashboard-inputs" id="size" name="size" value="{{pet.size}}">
+                                <option value="xtra-small">Extra Small</option>
+                                <option value="small">Small</option>
+                                <option value="medium">Medium</option>
+                                <option value="large">Large</option>
+                                <option value="xtra-large">Extra Large</option>
+                            </select>
                         </div>
                         
                         <div class="flex justify-center">
-                            <label for="age"></label>
-                            <input class="dashboard-inputs" placeholder="Age" id="age" name="age" value="{{pet.age}}" />
+                            
+                            <select class="selector-sizing dashboard-inputs" id="age" name="age" value="{{pet.age}}">
+                                <option value="infant">0 to 1 yrs</option>
+                                <option value="young">1 to 3 yrs</option>
+                                <option value="young-adult">3-6 yrs</option>
+                                <option value="adult">6-9 yrs</option>
+                                <option value="senior">9 yrs +</option>
+                            </select>
                         </div>
 
                         <div class="flex justify-center">
                             <label for="bio"></label>
-                            <textarea class="dashboard-inputs" placeholder="Bio" id="bio" name="bio" value="{{pet.bio}}" ></textarea>
+                            <textarea cols="24" class="dashboard-inputs" placeholder="Bio" id="bio" name="bio">{{pet.bio}}</textarea>
                         </div>
                     </div>
                 </div>
                 <div class="mt-4 mx-0 px-0">
                     <div
-                    class="js-upload uk-placeholder uk-text-center bg-gradient-to-r from-violet-600 to-indigo-600 text-indigo-50 mb-0 mx-0 px-0">
+                    class="js-upload uk-placeholder uk-text-center bg-gradient-to-r from-indigo-500 to-blue-300 text-indigo-900 mb-0 mx-0 px-0">
                         <span uk-icon="icon: cloud-upload"></span>
-                        <span class="uk-text-middle">Update your pet's photo here!</span>
+                        <span class="uk-text-middle">Upload your pet's photo here!</span>
                         <div uk-form-custom>
                             <form encType="multipart/form-data" action="">
-                                <input id="img-input" type="file" value="{{pet.pic_filename}}" multiple />
+                                <input id="img-input" type="file" multiple  value="{{pet.pet_name}}"/>
                             </form>
-                            <span class="uk-link text-sky-500">selecting one</span>
+                            <span class="uk-link text-sky-700">selecting one</span>
                         </div>
-                        <img id="test-id" />
                     </div>
                 </div>
-          </form>
-      </div>
-  </section>
-</div>
-<div class="flex flex-wrap justify-center items-center">
-    <article class="m-8">
-      <form id="comment-form">
-          <div class="m-2">
-              <textarea class="rounded text-black p-2" id="comment-body"></textarea>
-          </div>
+                        <div class="flex justify-center py-2">
+                            <img class="" id="test-id" width="400"/>
+                        </div>
+                        
 
-          <div class="m-2">
-              <button type="submit" class="text-indigo-50 bg-violet-400 hover:bg-violet-300 text-white font-bold py-2 my-1 px-2 mx-1 rounded border-b-4 border-indigo-700 flex justify-center">add comment</button>
-              <button type="button" id="addFave-btn" class="text-indigo-50 bg-violet-400 hover:bg-violet-300 font-bold py-2 my-1 px-2 mx-1 rounded border-b-4 border-indigo-700 flex justify-center">Fave</button>
-          </div>
-      </form>
-    </article>
-</div>
+
+
+
+            </div>
+            <div id="test-id"></div>
+        </form>
+                <div class="flex justify-center ml-3">
+                    <div>
+                        <div class="my-5">
+                            <a href="/dashboard/"><i id="edit-pet" class="fas fa-save text-sky-400 hover:text-sky-500 text-3xl"></i></a>
+                        </div>
+                        <div class="my-5">
+                            <button id="delete-pet-btn"><i class="fa fa-trash text-red-500 hover:text-red-300 text-3xl" aria-hidden="true"></i></button>
+                        </div>
+                    </div>
+                </div>
+    </div>
+</section>
 
 <script src="/javascript/edit-pet.js"></script>
 <script src="/javascript/delete-pet.js"></script>
-<script src="/javascript/comment.js"></script>
