can now click on picture to go to single pet page

--- a/views/partials/pet-info.handlebars
+++ b/views/partials/pet-info.handlebars
@@ -3,7 +3,9 @@
 >
 <input value="{{id}}" class="get-id invisible"/>
 <div class="uk-transition-toggle" tabindex="0">
+        <a href="/pet/{{id}}">
             <img class="uk-position-center uk-preserve-width uk-responsive-height uk-object-scale-down" src="{{pic_filename}}" width="auto" height="auto" alt="">
+        </a>
             <div class="uk-transition-slide-left uk-position-top uk-overlay uk-overlay-default rounded-lg">
                 <p class="uk-h4 uk-margin-remove">{{bio}}</p>
             </div>
